--- a/demo/demo.html
+++ b/demo/demo.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html><head><title>Demo : email-autocomplete-vanilla.js</title>
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#">
 <meta charset="UTF-8">
+<meta name="content-language" content="en">
 <meta name="robots" content="noindex,nofollow,noarchive">
-<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no,viewport-fit=cover">
+<meta name="viewport" content="width=device-width,initial-scale=1.0,viewport-fit=cover">
 <meta name="format-detection" content="telephone=no">
+<title>Demo : email-autocomplete-vanilla.js</title>
 </head>
 <script src="../dist/email-autocomplete-vanilla.min.js"></script>
 <style>
