--- a/demo/demo.html
+++ b/demo/demo.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#">
+<html lang="en">
+<head>
 <meta charset="UTF-8">
 <meta name="content-language" content="en">
 <meta name="robots" content="noindex,nofollow,noarchive">
