--- a/demo/demo.html
+++ b/demo/demo.html
@@ -20,6 +20,7 @@ input {
 	color: rgba(128,128,128,0.85);
 }
 </style>
+<h1>Demo : email-autocomplete-vanilla.js</h1>
 <input id="target_input_id" name="email" type="email" size="80"><br>
 <script>
 document.addEventListener("DOMContentLoaded", function(e) {
